--- a/index.html
+++ b/index.html
@@ -1208,8 +1208,62 @@
               }
             };
 
-            const handleDownload = () => {
-                if (!modifiedImage) return;
+            const handleDownload = async () => {
+              if (!modifiedImage) return;
+              try {
+                // Load base and logo
+                const baseImg = await loadImage(modifiedImage);
+                const logoImg = await loadImage('./KAIRA_logo_final_4k.png'); // place this PNG next to index.html
+
+                const W = baseImg.width;
+                const H = baseImg.height;
+
+                const canvas = document.createElement('canvas');
+                canvas.width = W; canvas.height = H;
+                const ctx = canvas.getContext('2d');
+
+                // Draw base image
+                ctx.drawImage(baseImg, 0, 0);
+
+                // --- Compute a ~1 cm visual height (≈38–42 px at ~96 DPI) but scale relative to image height ---
+                const targetH = Math.max(38, Math.round(H * 0.04)); // ~4% of height, min 38px
+                const scale = targetH / logoImg.height;
+                const logoW = Math.round(logoImg.width * scale);
+                const logoH = Math.round(logoImg.height * scale);
+
+                // Margin from edges (1.5% of max side, min 12px)
+                const margin = Math.max(12, Math.round(Math.max(W, H) * 0.015));
+                const x = W - logoW - margin;
+                const y = H - logoH - margin;
+
+                // Optional subtle pad for readability on bright images
+                const pad = Math.ceil(Math.max(2, Math.round(targetH * 0.15)));
+                ctx.save();
+                ctx.fillStyle = 'rgba(0,0,0,0.35)';
+                ctx.fillRect(x - pad, y - pad, logoW + pad * 2, logoH + pad * 2);
+                ctx.restore();
+
+                // Draw logo on top
+                ctx.drawImage(logoImg, x, y, logoW, logoH);
+
+                // Export and download
+                const out = canvas.toDataURL('image/png');
+                const a = document.createElement('a');
+                a.href = out;
+                a.download = `kaira-edited-${Date.now()}.png`;
+                document.body.appendChild(a);
+                a.click();
+                a.remove();
+              } catch (e) {
+                console.warn('[Download with watermark] failed, falling back to raw image:', e);
+                const a = document.createElement('a');
+                a.href = modifiedImage;
+                a.download = `kaira-edited-${Date.now()}.png`;
+                document.body.appendChild(a);
+                a.click();
+                a.remove();
+              }
+            };
                 const link = document.createElement('a');
                 link.href = modifiedImage;
                 link.download = `kaira-edited-${Date.now()}.png`;
