--- a/index.html
+++ b/index.html
@@ -3377,5 +3377,27 @@ function toggleMask(inputEl, btnEl){
 })();
 </script>
 
+<script id="default-system-prompt">
+(function(){
+  // Varsayılan sistem promptu — boşsa bu doldurulur
+  const DEFAULT_SYSTEM_PROMPT = `Türkçe yanıt ver. Alaycı davran, ama aynı zamanda bilgilendirici ol, Üstten konuş, şakacı ol. Cevapların kısa ve öz olsun. Mizah kat. Gereksiz detaylardan kaçın. Cevapların 3 cümleyi geçmesin. Kullanıcıyı güldürmeye çalış.`;
+
+  function ensureDefaultSystemPrompt(){
+    const el = document.getElementById('system-prompt');
+    if (el && !el.value.trim()) el.value = DEFAULT_SYSTEM_PROMPT;
+  }
+
+  // Sayfa yüklenince ve sohbet görünümü seçilince doldur
+  document.addEventListener('DOMContentLoaded', ensureDefaultSystemPrompt);
+  const selectChat = document.getElementById('select-chat');
+  if (selectChat) selectChat.addEventListener('click', ensureDefaultSystemPrompt);
+
+  // Gönder'e basıldığında da boşsa otomatik doldur (capture=true: önce bizimki çalışır)
+  const sendBtn = document.getElementById('send-button');
+  if (sendBtn) sendBtn.addEventListener('click', function(){
+    ensureDefaultSystemPrompt();
+  }, true);
+})();
+</script>
 </body>
 </html>
