--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
             <div class="flex-grow bg-gray-800 rounded-2xl p-4 border border-gray-700 flex flex-col">
                 <div class="flex justify-between items-center mb-2 border-b border-gray-700 pb-2">
                      <h2 class="text-xl font-semibold text-white">Sohbet</h2>
-                     <button id="clear-chat" class="text-sm text-gray-400 hover:text-white">Sohbeti Temizle</button>
+                     <button id="clear-chat" type="button" class="text-sm text-gray-400 hover:text-white">Sohbeti Temizle</button>
                 </div>
                 <div id="chat-history" class="flex-grow overflow-y-auto space-y-4 p-2 flex flex-col"></div>
                 <div id="loader" class="hidden self-center my-4">
@@ -617,17 +617,16 @@
     </div>
     <script id="default-system-prompt">
 (function(){
-  // Kullanıcı alanını DOLDURMADAN görünmez bir varsayılan sistem promptu uygular.
-  // Not: Textarea içini doldurmayız; sadece gönderim anında geçici olarak enjekte edip anında geri boşaltırız.
+  // Görünmez varsayılan sistem promptu: kullanıcı alanını doldurmayız,
+  // sadece gönderim anında geçici olarak enjekte edip hemen geri boşaltırız.
   const DEFAULT_SYSTEM_PROMPT = `Türkçe yanıt ver. Alaycı davran, ama aynı zamanda bilgilendirici ol, Üstten konuş, şakacı ol. Cevapların kısa ve öz olsun. Mizah kat. Gereksiz detaylardan kaçın. Cevapların 3 cümleyi geçmesin. Kullanıcıyı güldürmeye çalış.`;
 
   function injectStealthDefaultOnce(){
     const el = document.getElementById('system-prompt');
     if (!el || el.value.trim()) return; // kullanıcı yazdıysa dokunma
-    // Gönderim süresince geçici olarak doldur
     el.dataset.kairaWasEmpty = '1';
-    el.value = DEFAULT_SYSTEM_PROMPT;
-    // İş bittikten hemen sonra geri boşalt
+    el.value = DEFAULT_SYSTEM_PROMPT;   // sadece gönderim anında geçici yaz
+    // mikro-görevde geri boşalt
     setTimeout(()=>{
       if (el && el.dataset.kairaWasEmpty === '1') {
         el.value = '';
@@ -636,35 +635,64 @@
     }, 0);
   }
 
+  function clearChatUI(){
+    try {
+      const hist = document.getElementById('chat-history');
+      if (hist) hist.innerHTML = '';
+      const err = document.getElementById('error-message');
+      if (err) { err.classList.add('hidden'); err.textContent = ''; }
+      const loader = document.getElementById('loader');
+      if (loader) loader.classList.add('hidden');
+      const userIn = document.getElementById('user-input');
+      if (userIn) userIn.value = '';
+      // İsteğe bağlı: sistem promptu boş kalsın (göstermiyoruz)
+      const sys = document.getElementById('system-prompt');
+      if (sys && sys.value === DEFAULT_SYSTEM_PROMPT) sys.value = '';
+      // Diğer modüller dinlesin diye event yayınla
+      document.dispatchEvent(new CustomEvent('kaira:chat-cleared'));
+    } catch(e){ console.warn('[Chat Clear] ', e); }
+  }
+
+  function wipeSystemPromptOnEnterChat(){
+    // Evrensel Sohbet görünümü seçildiğinde textarea'yı boşalt
+    const sys = document.getElementById('system-prompt');
+    if (sys && !sys.dataset.userTouched) sys.value = '';
+  }
+
   function wireUp(){
-    // Gönder butonu tıklamasını CAPTURE aşamasında yakala (önce biz çalışalım)
-    const sendBtn = document.getElementById('send-button');
-    if (sendBtn) {
-      sendBtn.addEventListener('click', injectStealthDefaultOnce, true);
-    }
+    // Delegated click: DOM tekrar oluşturulsa bile çalışsın
+    document.addEventListener('click', function(ev){
+      const target = ev.target;
+      if (!target || typeof target.closest !== 'function') return;
+      // Gönder butonu (capture edilmeden önce tetikle)
+      if (target.closest && target.closest('#send-button')) {
+        injectStealthDefaultOnce();
+      }
+      // Sohbeti temizle
+      if (target.closest && target.closest('#clear-chat')) {
+        ev.preventDefault();
+        clearChatUI();
+      }
+      // Seçim ekranından Evrensel Sohbet'e girişte promptu boşalt
+      if (target.closest && target.closest('#select-chat')) {
+        wipeSystemPromptOnEnterChat();
+      }
+    }, true);
+
     // Enter (Shift'siz) ile gönderimler için de koruma
     const input = document.getElementById('user-input');
     if (input) {
       input.addEventListener('keydown', function(ev){
-        if (ev.key === 'Enter' && !ev.shiftKey) injectStealthDefaultOnce();
+        if (ev.key === 'Enter' && !ev.shiftKey) {
+          injectStealthDefaultOnce();
+        }
       }, true);
     }
 
-    // "Sohbeti Temizle" butonu: geçmişi ve hatayı temizle
-    const clearBtn = document.getElementById('clear-chat');
-    if (clearBtn) {
-      clearBtn.addEventListener('click', function(){
-        try {
-          const hist = document.getElementById('chat-history');
-          if (hist) hist.innerHTML = '';
-          const err = document.getElementById('error-message');
-          if (err) { err.classList.add('hidden'); err.textContent = ''; }
-          const loader = document.getElementById('loader');
-          if (loader) loader.classList.add('hidden');
-          const userIn = document.getElementById('user-input');
-          if (userIn) userIn.value = '';
-        } catch(e){ console.warn('[Chat Clear] ', e); }
-      });
+    // Kullanıcı sistem promptuna dokunduysa bir daha otomatik boşaltmayalım
+    const sys = document.getElementById('system-prompt');
+    if (sys) {
+      sys.addEventListener('input', ()=>{ sys.dataset.userTouched = '1'; });
     }
   }
 
