--- a/index.html
+++ b/index.html
@@ -642,6 +642,7 @@
       if (hist) hist.innerHTML = '';
       const hist2 = document.getElementById('chat-container');
       if (hist2) hist2.innerHTML = '';
+
       // Her ihtimale karşı sohbet balonlarını doğrudan temizle
       document.querySelectorAll('#chat-view .chat-user-bubble, #chat-view .chat-assistant-bubble, #chat-view [data-chat-item]').forEach(function(el){ el.remove(); });
 
@@ -653,24 +654,44 @@
       const userIn = document.getElementById('user-input');
       if (userIn) userIn.value = '';
 
-      // 3) Muhtemel localStorage geçmişlerini temizle
+      // 3) Bellekteki (JS) geçmiş yapılarını sıfırla (varsa)
       try {
-        const keys = ['universal_chat_history','kaira:chat-history','chat_history'];
-        keys.forEach(function(k){ if (localStorage.getItem(k) !== null) localStorage.removeItem(k); });
-        // Genel tarama (chat/kaira) — varsa sil
-        Object.keys(localStorage).forEach(function(k){ if (/chat|kaira/i.test(k)) try{ localStorage.removeItem(k); }catch(_){} });
+        const g = window;
+        const CANDIDATES = ['conversation','messages','chatHistory','history','chatMessages','__kairaMessages','__chatCtx'];
+        CANDIDATES.forEach(function(k){
+          if (Array.isArray(g[k])) { g[k].length = 0; }
+          else if (g[k] && typeof g[k].clear === 'function') { try { g[k].clear(); } catch(_){} }
+          else if (g[k] && typeof g[k] === 'object') { try { Object.keys(g[k]).forEach(function(p){ delete g[k][p]; }); } catch(_){} }
+        });
+        // Yaygın custom temizleyiciler
+        if (typeof g.resetChat === 'function') { try { g.resetChat(); } catch(_){} }
+        if (typeof g.clearHistory === 'function') { try { g.clearHistory(); } catch(_){} }
       } catch(_){ }
 
-      // 4) Sistem promptu kullanıcıya görünmesin
+      // 4) storage alanları (local + session) — chat/kaira içeriyorsa sil
+      try {
+        const nuke = function(storage){
+          const toDel = [];
+          for (let i = 0; i < storage.length; i++) {
+            const k = storage.key(i);
+            if (/chat|kaira/i.test(k)) toDel.push(k);
+          }
+          toDel.forEach(function(k){ try { storage.removeItem(k); } catch(_){} });
+        };
+        if (window.localStorage) nuke(window.localStorage);
+        if (window.sessionStorage) nuke(window.sessionStorage);
+      } catch(_){ }
+
+      // 5) Sistem promptu kullanıcıya görünmesin (gizli varsayılanı temizle)
       const sys = document.getElementById('system-prompt');
       if (sys && sys.value && sys.value.trim() === DEFAULT_SYSTEM_PROMPT.trim()) sys.value = '';
 
-      // 5) Üst modüller haberdar olsun
-      document.dispatchEvent(new CustomEvent('kaira:chat-cleared', { detail: { source: 'clear-button' } }));
-
-      // 6) Scroll en alta değil başa
+      // 6) Scroll tepeye
       const wrap = document.getElementById('chat-view');
       if (wrap && typeof wrap.scrollTo === 'function') wrap.scrollTo({ top: 0, behavior: 'smooth' });
+
+      // 7) Olay yayınla
+      document.dispatchEvent(new CustomEvent('kaira:chat-cleared', { detail: { source: 'clear-button' } }));
 
       console.log('[Chat] cleared');
     } catch(e){ console.warn('[Chat Clear] ', e); }
